f1-next-schedule/style.css
:root {
	--no-bg-color: #ffffff;
	--no-text-color: #FF1801;
	--no-sec-color: #ffffff;
	--no-border-color: #37352f;
}

[theme="dark"] {
	--no-bg-color: #252525; /*191919 252525*/
  --no-sec-color: #ff8f85;
	--no-text-color: #ff8b80;
	--no-border-color: #fff;
}



* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  background: var(--no-bg-color);
}

body {
  display: flex;
  align-items: center;
  justify-content: left;

  width: 100vw;
  min-height: 100vh;

  padding-left: 16px;
  padding-right: 16px;

  font-family: "space-grotesk-variable", sans-serif;
  font-size: 10px;
  color: var(--no-text-color);

  box-shadow: 0 4px 8px 0 var(--shadow-color);
}

.title-text {
  font-variation-settings: "wght" 700;
  
  font-size: 16px;
}


table {
  width: 100vw;
  table-layout: fixed;
  white-space: nowrap;
  
  border-collapse: collapse;
}



td:nth-child(1) {
  width: 50%;
  overflow: hidden;
  text-overflow: ellipsis;
}

td:nth-child(2) {
  text-overflow: ellipsis;
  width: 10px;
  text-align: left;
}

td:nth-child(3) {
  text-align: right;
  text-align-last: right;
}

